--- a/src/style.scss
+++ b/src/style.scss
@@ -125,7 +125,88 @@
                     }
                 }
             }
+            .search{
+                border-bottom: 1px solid gray;
+
+                .searchForm{
+                    padding: 10px;
+
+                input{
+                    background-color:transparent;
+                    color: white;
+                    border: none;
+                    outline: none;                    
+                    &::placeholder{
+                        color: lightgray;
+                    }
+                }
+            }
+            .userChat{
+                display: flex;
+                align-items: center;
+                padding: 10px;
+                gap: 10px;
+                color: white;
+                cursor: pointer;
+                &:hover{
+                    background-color: #2f2d52;
+                }
+                img{
+                    width: 50px;
+                    height: 50px;
+                    border-radius: 50%;
+                    object-fit: cover;
+                }
+            }
+
+           
+            }
+            .chats{
+
+                .usersChats{
+                     display: flex;
+                align-items: center;
+                padding: 10px;
+                gap: 10px;
+                color: white;
+                cursor: pointer;
+                &:hover{
+                    background-color: #2f2d52;
+                }
+                img{
+                    width: 50px;
+                    height: 50px;
+                    border-radius: 50%;
+                    object-fit: cover;
+                }
+                .userChatInfo{
+                    span{font-size: 18px;font-weight: 500;}
+                    p{font-size: 14px;color: lightgray;}
+                }
+                }
+            }
         }
-        .chat{flex: 2;}
+        .chat{
+            flex: 2;
+            .chatInfo{
+                height: 50px;
+                background-color: #5d5b8d;
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                padding: 10px;
+                color: lightgray;
+            }
+
+            .chatIcons{
+                display: flex;
+                gap: 10px;
+
+                img{
+                    height: 24px;
+                    cursor: pointer;
+                }
+            }
+        }
     }
 }
